<resources>
    <string name="app_name">social media</string>
    <string name="home">Trang chủ</string>
    <string name="notify">Thông báo</string>
    <string name="add">Thêm</string>
    <string name="search">Tìm kiếm</string>
    <string name="profile">Hồ sơ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_story">Tin của bạn</string>
    <string name="add_comment">Thêm bình luận...</string>
    <string name="time">12 giờ trước</string>
    <string name="description">Đẹp trai đệp trai đẹp trai đệp trai đẹp trai đẹp trai đẹp trai đẹp trai đẹp trai đẹp trai đẹp trai đẹp trai đẹp trai đẹp trai đẹp trai đệp trai đẹp trai đệp trai</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Đăng nhập để tiếp tục</string>
    <string name="user">Tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="forgotpass">Quên mật khẩu?</string>
    <string name="login">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="signup">Dăng ký</string>
    <string name="fullname">Họ và tên</string>
    <string name="haveacc">Đã có tài khoản? Quay lại đăng nhập</string>
    <string name="name_app">Tên người dùng</string>
    <string name="logout">Đăng xuất</string>
    <string name="setting">Cài đặt</string>
    <string name="photo">Ảnh/Video</string>
    <string name="tag">Gắn thẻ người khác</string>
    <string name="emoji">Cảm xúc/Hoạt động</string>
    <string name="checkin">Check in</string>
    <string name="stream">Video trực tiếp</string>
    <string name="save">Lưu bài viết</string>
    <string name="hide">Ẩn bài viết</string>
</resources>