<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAct"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/bangers"
            android:text="Dazzdi"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            android:transitionName="logo_trans" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            android:transitionName="text_trans" />

        <TextView
            android:id="@+id/txt_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:transitionName="text_trans" />

        <LinearLayout
            android:id="@+id/linear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/antic"
                    android:hint="@string/user" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:fontFamily="@font/antic" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_forgot_pass"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/forgotpass"
                android:layout_gravity="end"
                android:elevation="0dp"
                android:fontFamily="@font/antic"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
                android:textAllCaps="false"
                android:textStyle="italic"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signin"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_btn_login"
                android:fontFamily="@font/antic"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic"
                android:text="@string/or"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_btn_signup"
                android:textColor="@color/white"
                android:fontFamily="@font/antic"
                android:textAllCaps="false"
                android:textSize="20sp"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progres"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/gray"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>